--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "homepage": "https://github.com/grloch/learn-salesforce#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "gulp-nunjucks-render": "^2.2.3",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
+    "gulp-uglify": "^3.0.2",
     "nunjucks": "^3.2.3",
     "sass": "^1.45.0"
   },
