--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "liveServer.settings.port": 4500,
-  "liveServer.settings.root": "/dist",
+  "liveServer.settings.root": "/docs",
   "liveServer.settings.wait": 100,
   "liveServer.settings.ignoreFiles": [".vscode/**", "**/*.scss", "**/*.sass"],
 
